updated arbtt tooling

--- a/.arbtt/categorize.cfg
+++ b/.arbtt/categorize.cfg
@@ -1,9 +1,11 @@
 aliases (
-	"Navigator"  -> "browser",
+	"Navigator"  -> "firefox",
+	"chromium-browser" -> "chromium",
 	"Mail"       -> "mail",
 	"Msgcompose" -> "mail",
 	"Pidgin"     -> "pidgin",
-	"org_inkscape_Inkscape" -> "Inkscape"
+	"org_inkscape_Inkscape" -> "Inkscape",
+	"microsoft_teams_-_preview" -> "MS_Teams",
 )
 
 -- inactivity
@@ -14,6 +16,7 @@ current window $program == ["Pidgin", "signal"]  ==> tag Activity:Chat,
 current window $program == "code" ==> tag Activity:Coding,
 current window $program == "Mail" ==> tag Activity:mailReading,
 current window $program == "Msgcompose" ==> tag Activity:mailWriting,
+current window $program == "microsoft teams - preview: Microsoft Teams" ==> tag Activity:Call,
 
 current window $program == "kwrite" ==> tag Activity:kwrite,
 
@@ -31,6 +34,10 @@ current window $program == "Navigator" ==> {
 		tag Program:Youtube,
 		tag Activity:Watch,
 	},
+	current window $title =~ m|^Meet – | ==> {
+		tag Program:Google_meet,
+		tag Activity:Call,
+	},
 	tag Activity:Web, -- generic web browsing activity
 },
 
@@ -39,7 +46,7 @@ current window $program == "konsole" ==> {
 		tag Program:irssi,
 		tag Activity:Chat,
 	},
-	tag Activity:Konsole,
+	tag Activity:Console,
 },
 
 current window $program == "gl" && current window $title =~ /- mpv$/ ==> {
