tuned arbtt for ms teams

--- a/.arbtt/categorize.cfg
+++ b/.arbtt/categorize.cfg
@@ -16,7 +16,7 @@ current window $program == ["Pidgin", "signal"]  ==> tag Activity:Chat,
 current window $program == "code" ==> tag Activity:Coding,
 current window $program == "Mail" ==> tag Activity:mailReading,
 current window $program == "Msgcompose" ==> tag Activity:mailWriting,
-current window $program == "microsoft teams - preview: Microsoft Teams" ==> tag Activity:Call,
+current window $program =~ m!microsoft teams - preview! ==> tag Activity:Call,
 
 current window $program == "kwrite" ==> tag Activity:kwrite,
 
