update arbtt config

--- a/.arbtt/categorize.cfg
+++ b/.arbtt/categorize.cfg
@@ -6,6 +6,9 @@ aliases (
 	"Pidgin"     -> "pidgin",
 	"org_inkscape_Inkscape" -> "Inkscape",
 	"microsoft_teams_-_preview" -> "MS_Teams",
+	"chuchel_exe" -> "Chuchel",
+	"machinarium_exe" -> "Machinarium",
+	"pilgrims_exe" -> "Pilgrims",
 )
 
 -- inactivity
@@ -34,9 +37,17 @@ current window $program == "Navigator" ==> {
 		tag Program:Youtube,
 		tag Activity:Watch,
 	},
-	current window $title =~ m|^Meet – | ==> {
-		tag Program:Google_meet,
+	current window $title =~ m!^Meet – ! ==> {
+		tag Program:Google_Meet,
 		tag Activity:Call,
+	},
+	current window $title =~ m!\bOnline LaTeX Editor Overleaf — ! ==> {
+		tag Program:Overleaf,
+		tag Activity:Overleaf,
+	},
+	current window $title =~ m!\bTabulky Google — |\nDokumenty Google —! ==> {
+		tag Program:Google_Documents,
+		tag Activity:Documents,
 	},
 	tag Activity:Web, -- generic web browsing activity
 },
@@ -53,6 +64,8 @@ current window $program == "gl" && current window $title =~ /- mpv$/ ==> {
 	tag Program:mpv,
 	tag Activity:Watch,
 },
+
+current window $program == ["chuchel.exe", "RVGL", "machinarium.exe", "pilgrims.exe"] ==> tag Activity:Gaming,
 
 -- tag current program (what was not tagger earlier)
 tag Program:$current.program,
