--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,21 +1,29 @@
-<?xml version="1.0"?>
-<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+<?xml version='1.0'?>
+<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
-
-    <match target="pattern">
-        <test qual="any" name="family"><string>monospace</string></test>
-        <edit name="family" mode="append" binding="weak"><string>Noto Color Emoji</string></edit>
-    </match>
-
-    <match target="pattern">
-        <test qual="any" name="family"><string>serif</string></test>
-        <edit name="family" mode="append" binding="weak"><string>Noto Color Emoji</string></edit>
-    </match>
-
-    <match target="pattern">
-        <test qual="any" name="family"><string>sans-serif</string></test>
-        <edit name="family" mode="append" binding="weak"><string>Noto Color Emoji</string></edit>
-    </match>
-
+ <match target="pattern">
+  <test qual="any" name="family">
+   <string>monospace</string>
+  </test>
+  <edit binding="weak" mode="append" name="family">
+   <string>Noto Color Emoji</string>
+  </edit>
+ </match>
+ <match target="pattern">
+  <test qual="any" name="family">
+   <string>serif</string>
+  </test>
+  <edit binding="weak" mode="append" name="family">
+   <string>Noto Color Emoji</string>
+  </edit>
+ </match>
+ <match target="pattern">
+  <test qual="any" name="family">
+   <string>sans-serif</string>
+  </test>
+  <edit binding="weak" mode="append" name="family">
+   <string>Noto Color Emoji</string>
+  </edit>
+ </match>
+ <dir>~/.fonts</dir>
 </fontconfig>
-
